--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -14,10 +14,22 @@
     -->
     <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
 " providerName="System.Data.SqlClient" />-->
-  
-    <add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
-" providerName="System.Data.SqlClient" />
-    
+
+    <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
+" providerName="System.Data.SqlClient" />-->
+
+    <add name="DefaultConnection" connectionString="
+         Data Source=mssql3.webio.pl,2401;
+         Initial Catalog=kubamiszcz_NaproKartaDBv2;
+         Integrated Security=False;
+         User ID=kubamiszcz_kubamiszcz;
+         Password=Bur3k123$;
+         Trusted_Connection=false;
+         Encrypt=False;         
+         ApplicationIntent=ReadWrite;
+         MultiSubnetFailover=False"
+         providerName="System.Data.SqlClient" />
+    <!--TrustServerCertificate=True;-->
     <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
 " providerName="System.Data.SqlClient" />-->
   </connectionStrings>
@@ -42,7 +54,7 @@
       <add name="ApplicationInsightsWebTracking" type="Microsoft.ApplicationInsights.Web.ApplicationInsightsHttpModule, Microsoft.AI.Web" preCondition="managedHandler" />
     </modules>
     <validation validateIntegratedModeConfiguration="false" />
-  <handlers>
+    <handlers>
       <remove name="ExtensionlessUrlHandler-Integrated-4.0" />
       <remove name="OPTIONSVerbHandler" />
       <remove name="TRACEVerbHandler" />
@@ -51,6 +63,7 @@
     <httpProtocol>
       <customHeaders>
         <add name="Access-Control-Allow-Origin" value="http://localhost:4200" />
+        <add name="Access-Control-Allow-Origin" value="http://www.naproangular.hostingasp.pl" />
         <add name="Access-Control-Allow-Headers" value="X-AspNet-Version,X-Powered-By,Date,Server,Accept,Accept-Encoding,Accept-Language,Cache-Control,Connection,Content-Length,Content-Type,Host,Origin,Pragma,Referer,User-Agent" />
         <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE, OPTIONS" />
         <add name="Access-Control-Max-Age" value="1000" />
