--- a/NaproKarta.Server/NaproKarta.Server.csproj
+++ b/NaproKarta.Server/NaproKarta.Server.csproj
@@ -198,7 +198,7 @@
     <Compile Include="Models\Cycle.cs" />
     <Compile Include="Models\ApplicationUser.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="Services\NaproKartaChartService.cs" />
+    <Compile Include="Services\NaproServerChartService.cs" />
     <Compile Include="Services\NaproKartaUserService.cs" />
   </ItemGroup>
   <ItemGroup>
@@ -220,6 +220,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
+    <None Include="Properties\PublishProfiles\FolderProfile.pubxml" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Migrations\201712031928210_init.resx">
