--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -18,7 +18,7 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
 " providerName="System.Data.SqlClient" />-->
 
-    <add name="DefaultConnection" connectionString="
+    <!--<add name="DefaultConnection" connectionString="
          Data Source=mssql3.webio.pl,2401;
          Initial Catalog=kubamiszcz_NaproKartaDBv2;
          Integrated Security=False;
@@ -28,10 +28,11 @@
          Encrypt=False;         
          ApplicationIntent=ReadWrite;
          MultiSubnetFailover=False"
-         providerName="System.Data.SqlClient" />
+         providerName="System.Data.SqlClient" />-->
+		
     <!--TrustServerCertificate=True;-->
-    <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
-" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />
+		
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
@@ -62,8 +63,8 @@
     </handlers>
     <httpProtocol>
       <customHeaders>
-        <!--<add name="Access-Control-Allow-Origin" value="http://localhost:4200" />-->
-        <add name="Access-Control-Allow-Origin" value="http://www.naproangular.hostingasp.pl" />
+        <add name="Access-Control-Allow-Origin" value="*" />
+        <!--<add name="Access-Control-Allow-Origin" value="http://www.naproangular.hostingasp.pl" />-->
         <add name="Access-Control-Allow-Headers" value="X-AspNet-Version,X-Powered-By,Date,Server,Accept,Accept-Encoding,Accept-Language,Cache-Control,Connection,Content-Length,Content-Type,Host,Origin,Pragma,Referer,User-Agent" />
         <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE, OPTIONS" />
         <add name="Access-Control-Max-Age" value="1000" />
@@ -120,6 +121,10 @@
       <dependentAssembly>
         <assemblyIdentity name="System.Net.Http.WebRequest" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-2.0.0.0" newVersion="2.0.0.0" />
+      </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="Unity.Abstractions" publicKeyToken="6d32ff45e0ccc69f" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-2.3.1.0" newVersion="2.3.1.0" />
       </dependentAssembly>
     </assemblyBinding>
   </runtime>
