--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -15,8 +15,8 @@
     <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
 " providerName="System.Data.SqlClient" />-->
 
-    <!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
-" providerName="System.Data.SqlClient" />-->
+    <add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
+" providerName="System.Data.SqlClient" />
 
     <!--<add name="DefaultConnection" connectionString="
          Data Source=mssql3.webio.pl,2401;
@@ -31,7 +31,7 @@
          providerName="System.Data.SqlClient" />-->
 		
     <!--TrustServerCertificate=True;-->
-    <add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />
+    <!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />-->
 		
   </connectionStrings>
   <appSettings>
@@ -63,7 +63,8 @@
     </handlers>
     <httpProtocol>
       <customHeaders>
-        <add name="Access-Control-Allow-Origin" value="*" />
+        <!--<add name="Access-Control-Allow-Origin" value="*" />-->
+        <add name="Access-Control-Allow-Origin" value="http://localhost:4200" />
         <!--<add name="Access-Control-Allow-Origin" value="http://www.naproangular.hostingasp.pl" />-->
         <add name="Access-Control-Allow-Headers" value="X-AspNet-Version,X-Powered-By,Date,Server,Accept,Accept-Encoding,Accept-Language,Cache-Control,Connection,Content-Length,Content-Type,Host,Origin,Pragma,Referer,User-Agent" />
         <add name="Access-Control-Allow-Methods" value="GET, PUT, POST, DELETE, OPTIONS" />
