--- a/NaproKarta.Client/App/package.json
+++ b/NaproKarta.Client/App/package.json
@@ -26,17 +26,19 @@
     "bootstrap": "^4.0.0-beta.2",
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
+    "jquery": "^3.2.1",
+    "popper": "^1.0.1",
     "rxjs": "^5.5.2",
-    "zone.js": "^0.8.14"
+    "zone.js": "^0.8.4"
   },
   "devDependencies": {
-    "@angular/cli": "1.5.3",
+    "@angular/cli": "^1.6.1",
     "@angular/compiler-cli": "^5.0.0",
     "@angular/language-service": "^5.0.0",
     "@types/jasmine": "~2.5.53",
     "@types/jasminewd2": "~2.0.2",
     "@types/node": "~6.0.60",
-    "codelyzer": "~3.2.0",
+    "codelyzer": "^4.0.2",
     "jasmine-core": "~2.6.2",
     "jasmine-spec-reporter": "~4.1.0",
     "karma": "~1.7.0",
@@ -47,7 +49,7 @@
     "karma-jasmine-html-reporter": "^0.2.2",
     "protractor": "~5.1.2",
     "ts-node": "~3.2.0",
-    "tslint": "~5.7.0",
+    "tslint": "^5.8.0",
     "typescript": "~2.4.2"
   }
 }
