--- a/NaproKarta.Client/App/package.json
+++ b/NaproKarta.Client/App/package.json
@@ -28,6 +28,7 @@
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
     "popper": "^1.0.1",
+    "popper.js": "^1.12.3",
     "rxjs": "^5.5.2",
     "zone.js": "^0.8.4"
   },
