--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -12,11 +12,14 @@
 	<connectionStrings>
 		<!--
     Update-Database -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
+		update-database -TargetMigration 201712181910194_init
+
     -->
 		<!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;
 " providerName="System.Data.SqlClient" />-->
 
-		<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>
+		<!--LAPEK-->
+		<!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>-->
 
 		<!--<add name="DefaultConnection" connectionString="
          Data Source=mssql3.webio.pl,2401;
@@ -31,7 +34,9 @@
          providerName="System.Data.SqlClient" />-->
 
 		<!--TrustServerCertificate=True;-->
-		<!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />-->
+
+		<!--FABRITY-->
+		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />
 
 	</connectionStrings>
 	<appSettings>
