--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -19,7 +19,7 @@
 " providerName="System.Data.SqlClient" />-->
 
 		<!--LAPEK-->
-		<!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>-->
+		<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>
 
 		<!--<add name="DefaultConnection" connectionString="
          Data Source=mssql3.webio.pl,2401;
@@ -36,7 +36,7 @@
 		<!--TrustServerCertificate=True;-->
 
 		<!--FABRITY-->
-		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />-->
 
 	</connectionStrings>
 	<appSettings>
