--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -12,14 +12,15 @@
 	<connectionStrings>
 		<!--
     Update-Database -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
-		update-database -TargetMigration 201712181910194_init
+		update-database -TargetMigration 201712181910194_init -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
+		Add-Migration 1 -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
     -->
 
 		<!--LAPEK-->
-		<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>
+		<!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>-->
 
 		<!--FABRITY-->
-		<!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />
 		
     <!--STACJONARNY-->
 	<!--	<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;" providerName="System.Data.SqlClient" />-->
