--- a/NaproKarta.Client/NaproKarta.Client.csproj
+++ b/NaproKarta.Client/NaproKarta.Client.csproj
@@ -245,12 +245,15 @@
     <Compile Include="Services\NaproClientAppService.cs" />
     <Compile Include="Services\NaproClientChartService.cs" />
     <Compile Include="ViewModels\AccountViewModels.cs" />
+    <Compile Include="ViewModels\CycleVm.cs" />
     <Compile Include="ViewModels\HelpingViewModels\ChartIdAndTitle.cs" />
-    <Compile Include="ViewModels\ChartViewModel.cs" />
-    <Compile Include="ViewModels\ManageViewModels.cs" />
+    <Compile Include="ViewModels\ChartVm.cs" />
+    <Compile Include="ViewModels\ManageViewModel.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
-    <Compile Include="ViewModels\NavBarViewModel.cs" />
+    <Compile Include="ViewModels\NavBarVm.cs" />
+    <Compile Include="ViewModels\ObservationNoteVm.cs" />
+    <Compile Include="ViewModels\ObservationVm.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-theme.css" />
