--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -20,10 +20,10 @@
 		<!--<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZLENOV\SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient"/>-->
 
 		<!--FABRITY-->
-		<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />
+		<!--<add name="DefaultConnection" connectionString="Data Source=.;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false; " providerName="System.Data.SqlClient" />-->
 		
     <!--STACJONARNY-->
-	<!--	<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;" providerName="System.Data.SqlClient" />-->
+		<add name="DefaultConnection" connectionString="Data Source=KUBAMISZCZSTAC\TEW_SQLEXPRESS;Initial Catalog=NaproKartaDBv2;Integrated Security=True;User ID=naprokarta;Password=naprokarta;Trusted_Connection=false;" providerName="System.Data.SqlClient" />
 
 
 		<!--<add name="DefaultConnection" connectionString="
@@ -31,7 +31,7 @@
          Initial Catalog=kubamiszcz_NaproKartaDBv2;
          Integrated Security=False;
          User ID=kubamiszcz_kubamiszcz;
-         Password=Bur3k123$;
+         Password=$321k3ruB;
          Trusted_Connection=false;
          Encrypt=False;         
          ApplicationIntent=ReadWrite;
