--- a/NaproKarta.Client/Web.config
+++ b/NaproKarta.Client/Web.config
@@ -13,7 +13,7 @@
 		<!--
     Update-Database -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
 		update-database -TargetMigration 201712181910194_init -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
-		Add-Migration 1 -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
+		Add-Migration  -Verbose -ProjectName NaproKarta.Server -StartUpProjectName NaproKarta.Client 
     -->
 
 		<!--LAPEK-->
@@ -31,7 +31,7 @@
          Initial Catalog=kubamiszcz_NaproKartaDBv2;
          Integrated Security=False;
          User ID=kubamiszcz_kubamiszcz;
-         Password=$321k3ruB;
+         Password=Bur3k123$;
          Trusted_Connection=false;
          Encrypt=False;         
          ApplicationIntent=ReadWrite;
