--- a/NaproKarta.Server/NaproKarta.Server.csproj
+++ b/NaproKarta.Server/NaproKarta.Server.csproj
@@ -189,6 +189,10 @@
     <Compile Include="Migrations\201801050924477_2.Designer.cs">
       <DependentUpon>201801050924477_2.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801120947212_3.cs" />
+    <Compile Include="Migrations\201801120947212_3.Designer.cs">
+      <DependentUpon>201801120947212_3.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\SubModels\Cipher.cs" />
     <Compile Include="Models\SubModels\CipherCd.cs" />
     <Compile Include="Models\SubModels\Comment.cs" />
@@ -246,6 +250,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801050924477_2.resx">
       <DependentUpon>201801050924477_2.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801120947212_3.resx">
+      <DependentUpon>201801120947212_3.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
