--- a/NaproKarta.Server/NaproKarta.Server.csproj
+++ b/NaproKarta.Server/NaproKarta.Server.csproj
@@ -193,6 +193,10 @@
     <Compile Include="Migrations\201801120947212_3.Designer.cs">
       <DependentUpon>201801120947212_3.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201801161159420_4.cs" />
+    <Compile Include="Migrations\201801161159420_4.Designer.cs">
+      <DependentUpon>201801161159420_4.cs</DependentUpon>
+    </Compile>
     <Compile Include="Models\SubModels\Cipher.cs" />
     <Compile Include="Models\SubModels\CipherCd.cs" />
     <Compile Include="Models\SubModels\Comment.cs" />
@@ -253,6 +257,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201801120947212_3.resx">
       <DependentUpon>201801120947212_3.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201801161159420_4.resx">
+      <DependentUpon>201801161159420_4.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
