--- a/.gitignore
+++ b/.gitignore
@@ -54,6 +54,7 @@ Thumbs.db
 
 # User-specific files (MonoDevelop/Xamarin Studio)
 *.userprefs
+NaproKarta.Client/Web.config
 
 # Build results
 [Dd]ebug/
