--- a/NaproKarta.Client/App/package.json
+++ b/NaproKarta.Client/App/package.json
@@ -27,6 +27,7 @@
     "core-js": "^2.4.1",
     "hammerjs": "^2.0.8",
     "jquery": "^3.2.1",
+    "moment-timezone": "^0.5.14",
     "popper": "^1.0.1",
     "popper.js": "^1.12.3",
     "rxjs": "^5.5.2",
